--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   >
     <img
       src="newwhite (1).png"
-      class="mt-10 h-36 w-96 bg-clip-text text-transparent"
+      class="mt-4 sm:mt-10 h-36 w-96 bg-clip-text text-transparent"
       alt=""
     />
-    <header class="text-center py-10">
+    <header class="text-center py-7 sm:py-10">
       <h1
         class="sm:text-5xl text-4xl text-slate-200 font-stretch-semi-expanded font-semibold animate-pulse duration-1000 line-through decoration-4 decoration-slate-400 tracking-wide"
       >
@@ -50,7 +50,7 @@
           </button>
         </div>
         <div
-          class="rounded-lg font-bold text-lg w-[100%] h-5 flex justify-around mb-3"
+          class="rounded-lg font-bold sm:text-lg w-[100%] h-5 flex justify-around mb-3"
         >
           <h1 class="justify-self-start">Priority:</h1>
           <!-- <h1>Add Task Priority</h1> -->
@@ -58,7 +58,7 @@
             <label for="high">High</label>
             <input
               id="high"
-              class="accent-red-500 bg-red-600 scale-150"
+              class="accent-red-500 bg-red-600 sm:scale-150"
               name="priority"
               type="radio"
             />
@@ -67,7 +67,7 @@
             <label for="medium">Medium</label>
             <input
               id="medium"
-              class="accent-amber-400 bg-amber-500 scale-150"
+              class="accent-amber-400 bg-amber-500 sm:scale-150"
               name="priority"
               type="radio"
             />
@@ -76,7 +76,7 @@
             <label for="low">Low</label>
             <input
               id="low"
-              class="accent-green-400 bg-green-500 scale-150"
+              class="accent-green-400 bg-green-500 sm:scale-150"
               name="priority"
               type="radio"
             />
