--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="flex w-[100%] mt-2 justify-around items-center">
           <input
             id="taskInput"
-            class="bg-slate-800 w-3/5 focus:outline-none p-1 h-9 placeholder:text-center rounded-lg mr-1"
+            class="bg-slate-800 w-3/5 focus:outline-none placeholder:text-sm p-1 h-9 placeholder:text-center rounded-lg mr-1"
             type="text"
             placeholder="It's RetroTaskin' Time..."
           />
